[gd_scene load_steps=2 format=3 uid="uid://b3oqh7it3qxro"]

[ext_resource type="Script" path="res://components/card/card_dependecies/draggable_component.gd" id="1_xf6gw"]

[node name="Draggable_component" type="Area2D"]
script = ExtResource("1_xf6gw")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
